public class AirEnergy {
    private double windSpeed;

    public AirEnergy(double windSpeed) {
        this.windSpeed = windSpeed;
    }

    public double calculateEnergy(double airTemperature) {
        // Implement air energy calculation based on the wind speed and air temperature
        // For simplicity, let's assume a simple formula
        return windSpeed * airTemperature;
    }
}
