public class SolarEnergy {
    private double timeOfDayLight;

    public SolarEnergy(double timeOfDayLight) {
        this.timeOfDayLight = timeOfDayLight;
    }

    public double calculateEnergy(double solarPanelSize) {
        // Implement solar energy calculation based on the time of daylight and solar panel size
        // For simplicity, let's assume a simple formula
        return timeOfDayLight * solarPanelSize;
    }
}
