public class WaterEnergy {
    private double waterWheelSize;

    public WaterEnergy(double waterWheelSize) {
        this.waterWheelSize = waterWheelSize;
    }

    public double calculateEnergy(double flowOfWater) {
        // Implement water energy calculation based on the water flow and water wheel size
        // For simplicity, let's assume a simple formula
        return flowOfWater * waterWheelSize;
    }
}

